Fix homepage hero section font Fix about me alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import "/sections/about/about.css"; */
+
 /* VARIABLES */
 
 :root {
@@ -57,7 +59,7 @@ header {
 
 .navbar a {
   color: #fff;
-  @apply m-4;
+  @apply ml-4;
 }
 
 .navbar.active {
@@ -87,7 +89,7 @@ header {
   font-weight: 800;
   line-height: normal;
   letter-spacing: 1rem;
-  font-size: clamp(5rem, 2.8571rem + 8.1633vw, 10rem);
+  font-size: clamp(2.125rem, -0.0231rem + 10.7407vw, 9.375rem);
   @apply font-special text-left;
   opacity: 0.7;
 }
@@ -107,7 +109,8 @@ header {
 
 .btn-green {
   background-color: var(--primary-accent-green-003);
-  @apply p-3 mt-5 rounded-md text-xl font-bold;
+  font-size: clamp(1.125rem, 1.088rem + 0.1852vw, 1.25rem);
+  @apply p-3 mt-5 rounded-md font-bold;
 }
 
 .btn-green:hover {
@@ -180,6 +183,7 @@ footer .bg-white {
 .section-content {
   @apply mx-24 my-auto;
 }
+
 .hero-section {
   background-color: var(--secondary-neutral-black-001);
   border-bottom: 5px solid var(--primary-accent-green-002);
@@ -331,115 +335,6 @@ footer .bg-white {
   border-radius: 196.819px;
 }
 
-.work-section {
-  padding: 50px 0px;
-  align-items: center;
-  justify-content: center;
-  gap: 34px;
-}
-
-.work-container {
-  display: flex;
-  padding: 24px 10px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 24px;
-
-  border-radius: 24px;
-  border: 1px solid var(--Primary-03, #003b49);
-  background: var(--Neutral-07, rgba(43, 43, 43, 0.5));
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
-}
-
-.work-container p {
-  font-size: 16px;
-  font-style: normal;
-  color: var(--Neutral-03, #fff);
-  align-self: stretch;
-}
-
-.job-year {
-  /* Body Regular */
-
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 1.28px;
-}
-
-.job-role,
-.job-place {
-  /* Body Bold */
-  font-weight: 700;
-  line-height: 24px; /* 150% */
-}
-
-.job-task {
-  /* Body Regular */
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 1.28px;
-}
-
-.company-logo-container {
-  width: 493px;
-  height: 663px;
-  position: relative;
-  right: 0;
-  top: 61px;
-  left: 0;
-  margin: 0 auto;
-}
-
-.company-logo-container img {
-  border-radius: 12px;
-  /* background: var(--Neutral-03, #fff); */
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  gap: 12px;
-}
-
-.logo-bw {
-  display: flex;
-  width: 281px;
-  padding: 12px;
-  justify-content: center;
-  align-items: center;
-  /* gap: 12px; */
-  position: absolute;
-  left: 65px;
-  top: 0.5px;
-}
-
-.logo-abs {
-  display: inline-flex;
-  padding: 12px;
-  align-items: flex-start;
-  /* gap: 12px; */
-
-  position: absolute;
-  right: 92.625px;
-  top: 167px;
-}
-
-.logo-multiS {
-  display: inline-flex;
-  padding: 12px;
-  align-items: flex-start;
-  gap: 12px;
-  position: absolute;
-  left: 65px;
-  bottom: 237px;
-}
-
-.logo-jfc {
-  display: inline-flex;
-  padding: 12px;
-  align-items: flex-start;
-  gap: 12px;
-  position: absolute;
-  right: 88.625px;
-  bottom: 70px;
-}
-
 .section-title-h2 {
   color: var(--Neutral-03, #fff);
   text-align: left;
@@ -496,90 +391,9 @@ footer .bg-white {
   margin-top: 1rem;
 }
 
-.tech-section {
-  display: flex;
-  height: 344px;
-  flex-direction: column;
-  align-items: left;
-  gap: 34px;
-  flex: 1 0 0;
-}
-
-.tech-skill-container {
-  display: flex;
-  align-items: flex-start;
-  align-content: flex-start;
-  gap: 14px;
-  align-self: stretch;
-  flex-wrap: wrap;
-}
-
-.skill-container {
-  display: flex;
-  padding: 12px;
-  align-items: flex-start;
-  gap: 12px;
-  border-radius: 12px;
-  background: var(--Primary-03, #003b49);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.education-section {
+/* .education-section {
   @apply pb-24;
-}
-
-.course-detail {
-  display: flex;
-  padding: 24px 10px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 24px;
-
-  border-radius: 24px;
-  border: 1px solid var(--Primary-03, #003b49);
-  background: var(--Neutral-07, rgba(43, 43, 43, 0.5));
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
-}
-
-.course-detail div p,
-.course-detail div h3 {
-  display: flex;
-  padding: 0px 33px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 12px;
-  line-height: 1.5;
-}
-
-.school-logo {
-  height: 96px;
-  align-self: stretch;
-
-  /* width: 493px; */
-  /* height: 663px; */
-  position: relative;
-  right: 0;
-  top: 140px;
-  left: 0;
-  margin: 0 auto;
-
-  &.langara {
-    left: 150px;
-  }
-
-  &.adnu {
-    left: -200px;
-  }
-
-  &.adnu img {
-    width: 184px;
-    height: 184px;
-    flex: 1 0 0;
-    border-radius: 240px;
-    border: 2px solid var(--Neutral-03, #fff);
-    background: lightgray 50% / contain no-repeat;
-  }
-}
+} */
 
 .portfolio-works-section {
   display: flex;
@@ -715,13 +529,10 @@ footer .bg-white {
     @apply mx-10;
   }
 
-  .hero-section div {
-    @apply mx-10 my-auto;
-  }
-
   .special-font {
     letter-spacing: inherit;
     margin: 1rem 0;
+    padding-bottom: 24px;
   }
 
   /* .special-font {
@@ -764,10 +575,6 @@ footer .bg-white {
     display: inherit;
   }
 
-  .company-logo-container {
-    display: none;
-  }
-
   .contact-card {
     width: 100%;
     margin-bottom: 2rem;
@@ -791,5 +598,17 @@ footer .bg-white {
     top: 25px;
     border-top-left-radius: 24px;
     left: inherit;
+  }
+}
+
+/* HERO SECTION */
+
+.hero-section .home-intro {
+  @apply mx-10 my-auto;
+}
+
+@media (min-width: 1024px) {
+  .hero-section .home-intro {
+    @apply mx-24 my-auto;
   }
 }
